--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "web-scraper-template",
+  "name": "canadian-wildfire-scraper",
   "version": "1.0.0",
   "description": "Bootstrap a node web scraper",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,10 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@json2csv/plainjs": "^6.1.3",
     "axios": "^1.2.0",
-    "cheerio": "^1.0.0-rc.12",
-    "json-2-csv": "^4.0.0",
-    "unzipper": "^0.10.11"
+    "csv-parse": "^6.1.0",
+    "csv-stringify": "^6.6.0"
   }
 }
