--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: web scraper
+name: ciwfs scraper
 
 # Controls when the workflow will run
 on:
@@ -9,6 +9,9 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  
+  permissions:
+    contents: write # allow push back to repo
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
